Bug#60111 storage type for table not saved in .frm  - Add new "format section" in extra data segment with additional table and    column properties. This was originally introduced in 5.1.20 based MySQL Cluster  - Remove hardcoded STORAGE DISK for table and instead    output the real storage format used. Keep both TABLESPACE    and STORAGE inside same version guard.  - Implement default version of handler::get_tablespace_name() since tablespace    is now available in share and it's unnecessary for each handler  to implement.    (the function could actually be removed totally now).  - Add test for combinations of TABLESPACE  and STORAGE with CREATE TABLE    and ALTER TABLE  - Add test to show that 5.5 now can read a .frm file created by MySQL Cluster    7.0.22. Although it does not yet show the column level attributes, they are read.